--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -9,7 +9,7 @@
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 282px);
   list-style: none;
-  grid-gap: 20px, 17px;
+  grid-gap: 20px 17px;
   padding: 0;
   margin: 0;
 }
@@ -19,15 +19,21 @@
   flex-direction: column;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  
+
   width: 282px;
   overflow: hidden;
+
 }
+
 
 .card__image {
   width: 282px;
   height: 282px;
 }
 .card__header {
+  font-family: "Inter";
+  font-style: normal;
   font-size: 24px;
   font-weight: 900;
   line-height: 29px;
@@ -41,10 +47,7 @@
   display: flex;
   background-color: white;
   color: black;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 25px 30px 25px 20px;
   align-items: center;
   justify-content: space-between;
   border-bottom-right-radius: 10px;
@@ -64,4 +67,14 @@
 .card__like-button:hover {
   opacity: 0.5;
   cursor: pointer;
+}
+@media screen and (max-width: 560px) {
+  .cards {
+    margin: 0 0 46px;
+  }
+
+  .cards__list {
+    width: 318px;
+    margin: auto;
+  }
 }
