--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -8,3 +8,18 @@
   margin-top: 0;
   margin-bottom: 60px;
 }
+@media screen and (max-width: 560px){
+  .footer{
+    width: 280px;
+  }
+.footer__copyright{
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 35px;
+}
+}
+@media screen and (min-width: 560px) and (max-width: 930px) {
+  .footer {
+    width: 570px;
+  }
+}
