--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,3 +1,25 @@
 .header {
   margin-top: 45px;
+  padding-bottom: 41px;
+  border: 1px inset rgba(84, 84, 84,0.8);
+  border-right-style: none;
+
+
+
+}
+@media screen and (max-width: 560px) {
+  .header {
+    margin: 26px 163px 0 0;
+    padding-bottom: 30px;
+  }
+
+  .header__logo {
+    margin-left: 25px;
+    height: 23px;
+    width: 124px;
+  }
+}@media screen and (min-width: 560px) and (max-width: 930px){
+  .header__logo{
+    margin-left:15px;
+  }
 }
