--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,7 +1,9 @@
 .page {
   background-color: black;
   color: white;
+  font-family: "Inter", "Arial", sans-serif'
 }
+
 .page__section {
   max-width: 880px;
   width: 100%;
@@ -11,5 +13,5 @@
 .page__content {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+
 }
