--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -9,7 +9,7 @@
   grid-template-areas:
     "title button"
     "description description";
-  grid-template-columns: minmax(auto, 373px) auto;
+  grid-template-columns: 15fr 1fr;
   gap: 16px 18px;
 }
 
@@ -21,7 +21,7 @@
   height: 24px;
   width: 24px;
   grid-area: button;
-
+  align-self: center;
   transition: opacity 0.3s linear;
   border: 1px solid rgba(255, 255, 255);
 }
@@ -40,9 +40,14 @@
   margin-top: 35px;
   margin-bottom: 35px;
   margin-left: auto;
-  margin-right: 0;
+  margin-right: 20px;
   transition: opacity 0.3s linear;
+  border-radius: 2px;
+  border: 2px solid white;
+
 }
+
+
 .profile__add-button:hover {
   opacity: 0.6;
   cursor: pointer;
@@ -57,20 +62,95 @@
   margin-right: 30px;
 }
 .profile__header {
+  font-family: "Inter";
+  font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
 
   max-width: 373px;
   grid-area: title;
-  
 }
 
 .profile__description {
+  font-family: "Inter";
+  font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   max-width: 282px;
   grid-area: description;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+@media screen and (max-width: 560px){
+.profile{
+  flex-direction:column;
+  padding-top: 40px;
+}
+.profile__image{
+  margin:0;
+
+}
+.profile__info{
+  grid-template-columns: 12fr 1fr;
+  grid-column-gap: 8px;
+  margin-top: 10px;
+}
+
+.profile__description{
+  width:100%;
+  text-align: center;
+  font-size:13px;
+  line-height:16px;
+
+}
+
+.profile__header{
+  font-size:20px;
+  line-height:25px;
+  max-width: 191px;
+  justify-self:center;
+}
+.profile__edit-button{
+  width: 18px;
+  height: 18px;
+}
+.profile__add-button{
+  margin: 34px 17px;
+  width:280px;
+}
+
+}
+@media screen and (min-width: 560px) and (max-width: 930px){
+  .profile {
+    column-gap: 20px;
+    justify-content: space-around;
+  }
+
+  .profile__info {
+    gap: 10px 12px;
+  }
+
+  .profile__image {
+    margin: 15px;
+  }
+
+  .profile__header {
+    font-size: 25px;
+    line-height: 30px;
+    white-space: nowrap;
+  }
+
+  .profile__description {
+    font-size: 15px;
+    line-height: 18px;
+  }
+
+  .profile__edit-button {
+    height: 19px;
+    width: 19px;
+  }
 }
