Made adjustments to header

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -67,7 +67,8 @@
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
-
+  margin-top: 0;
+  margin-bottom: 0;
   max-width: 373px;
   grid-area: title;
 }
