--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -4,7 +4,7 @@
   margin-bottom: 67px;
 }
 
-.card__list {
+.cards__list {
   display: grid;
   justify-content: center;
   grid-template-columns: repeat(auto-fit, 282px);
@@ -19,7 +19,7 @@
   flex-direction: column;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  
+
 
   width: 282px;
   overflow: hidden;
