--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -10,7 +10,7 @@
 }
 @media screen and (max-width: 560px){
   .footer{
-    width: 280px;
+    padding-left: 85px;
   }
 .footer__copyright{
   font-size: 16px;
@@ -20,6 +20,6 @@
 }
 @media screen and (min-width: 560px) and (max-width: 930px) {
   .footer {
-    width: 570px;
+    padding-left: 35px;
   }
 }
