--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,7 +1,7 @@
 .header {
   margin-top: 45px;
   padding-bottom: 41px;
-  border: 1px inset rgba(84, 84, 84,0.8);
+  border-bottom: 1px solid rgba(84, 84, 84,0.7);
   border-right-style: none;
 
 
