--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -11,6 +11,7 @@
     "description description";
   grid-template-columns: 15fr 1fr;
   gap: 16px 18px;
+  row-gap: 8px;
 }
 
 .profile__edit-button {
@@ -40,13 +41,11 @@
   margin-top: 35px;
   margin-bottom: 35px;
   margin-left: auto;
-  margin-right: 20px;
+  margin-right: 0;
   transition: opacity 0.3s linear;
   border-radius: 2px;
   border: 2px solid white;
-
 }
-
 
 .profile__add-button:hover {
   opacity: 0.6;
@@ -58,11 +57,10 @@
   width: 120px;
   border-radius: 50%;
   object-fit: cover;
-  background-position: center;
   margin-right: 30px;
 }
 .profile__header {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
@@ -74,7 +72,7 @@
 }
 
 .profile__description {
-  font-family: "Inter";
+  font-family: "Inter", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -86,46 +84,47 @@
   white-space: nowrap;
   overflow: hidden;
 }
-@media screen and (max-width: 560px){
-.profile{
-  flex-direction:column;
-  padding-top: 40px;
-}
-.profile__image{
-  margin:0;
+@media screen and (max-width: 560px) {
+  .profile {
+    flex-direction: column;
+    padding-top: 40px;
+  }
+  .profile__image {
+    margin: 0;
+  }
+  .profile__info {
+    grid-template-columns: 12fr 1fr;
+    grid-column-gap: 8px;
+    margin-top: 26px;
+  }
 
-}
-.profile__info{
-  grid-template-columns: 12fr 1fr;
-  grid-column-gap: 8px;
-  margin-top: 10px;
-}
+  .profile__description {
+    width: 100%;
+    text-align: center;
+    font-size: 14px;
+    line-height: 17px;
+  }
 
-.profile__description{
-  width:100%;
-  text-align: center;
-  font-size:13px;
-  line-height:16px;
+  .profile__header {
+    font-size: 20px;
+    line-height: 25px;
+    max-width: 196px;
+    justify-self: center;
+  }
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    background-size: 7px 7px;
+  }
 
-}
+  .profile__add-button {
+    margin: 34px 17px;
+    width: 280px;
 
-.profile__header{
-  font-size:20px;
-  line-height:25px;
-  max-width: 191px;
-  justify-self:center;
+    background-size: 17px 17px;
+  }
 }
-.profile__edit-button{
-  width: 18px;
-  height: 18px;
-}
-.profile__add-button{
-  margin: 34px 17px;
-  width:280px;
-}
-
-}
-@media screen and (min-width: 560px) and (max-width: 930px){
+@media screen and (min-width: 560px) and (max-width: 930px) {
   .profile {
     column-gap: 20px;
     justify-content: space-around;
