--- a/blocks/card.css
+++ b/blocks/card.css
@@ -27,7 +27,7 @@
   display: flex;
   background-color: white;
   color: black;
-  padding: 25px 25px 25px 20px;
+  padding: 25px 20px;
   align-items: center;
   justify-content: space-between;
   border-bottom-right-radius: 10px;
